# EmbeddedIOServices

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Config Editor/: Config.js  EmbeddedIOServicesIni.js  VariableBusConfig.js  index.html
Config Editor/ConfigGui/: ConfigGui.js
EmbeddedIOServices/src/HardwareAbstraction/: TimerService.cpp
HardwareAbstractions/: Stm32HalDigitalService.h  Stm32HalTimerService.h  TimerLocks.h
HardwareAbstractions/ATTiny427Expander/include/: ATTiny427ExpanderUpdateService.h  ATTiny427_EVSYSService.h  ATTiny427_ExpanderService.h  ATTiny427_PassthroughService.h  AnalogService_ATTiny427Expander.h  DigitalService_ATTiny427Expander.h  PwmService_ATTiny427Expander.h
HardwareAbstractions/ATTiny427Expander/src/: ATTiny427ExpanderUpdateService.cpp  ATTiny427_EVSYSService.cpp  ATTiny427_ExpanderService.cpp  ATTiny427_PassthroughService.cpp  AnalogService_ATTiny427Expander.cpp  DigitalService_ATTiny427Expander.cpp  PwmService_ATTiny427Expander.cpp
HardwareAbstractions/Esp32Idf/include/: Esp32IdfAnalogService.h  Esp32IdfCANService.h  Esp32IdfCommunicationService_Socket.h  Esp32IdfCommunicationService_UART.h  Esp32IdfCommunicationService_WebSocket.h  Esp32IdfDigitalService.h  Esp32IdfPwmService.h  Esp32IdfTimerService.h
HardwareAbstractions/Esp32Idf/src/: Esp32IdfAnalogService.cpp  Esp32IdfCANService.cpp  Esp32IdfCommunicationService_Socket.cpp  Esp32IdfCommunicationService_UART.cpp  Esp32IdfCommunicationService_WebSocket.cpp  Esp32IdfDigitalService.cpp  Esp32IdfPwmService.cpp  Esp32IdfTimerService.cpp
HardwareAbstractions/Stm32Hal/include/: STM32HalCommunicationService_CDC.h  Stm32HalAnalogService.h  Stm32HalConf.h  Stm32HalConf.h_STM32F103C  Stm32HalConf.h_STM32F401C  Stm32HalDigitalService.h  Stm32HalGpio.h  Stm32HalPwmService.h  Stm32HalTimer.h  Stm32HalTimerService.h  TimerLocks.h
HardwareAbstractions/Stm32Hal/src/: STM32HalCommunicationService_CDC.cpp  STM32HalPwmService.cpp  Stm32HalAnalogService.cpp  Stm32HalDigitalService.cpp  Stm32HalGpio.cpp  Stm32HalPwmService.cpp  Stm32HalTimer.cpp  Stm32HalTimerService.cpp  TimerLocks.cpp
HardwareAbstractions/Stm32duino/include/: Stm32duinoAnalogService.h  Stm32duinoConf.h  Stm32duinoDigitalService.h  Stm32duinoPwmService.h  Stm32duinoTimer.h  Stm32duinoTimerService.h
HardwareAbstractions/Stm32duino/src/: Stm32duinoAnalogService.cpp  Stm32duinoDigitalService.cpp  Stm32duinoPwmService.cpp  Stm32duinoTimer.cpp  Stm32duinoTimerService.cpp
HardwareAbstractions/Template/include/: DigitalService.h  PwmService.h
HardwareAbstractions/Template/src/: CommunicationService.cpp
HardwareAbstractions/W806/: README.md
HardwareAbstractions/W806/include/: AnalogService_W806.h  CommunicationService_W806UART.h  DigitalService_W806.h  PwmService_W806.h  TimerService_W806.h
HardwareAbstractions/W806/src/: AnalogService_W806.cpp  CommunicationService_W806UART.cpp  DigitalService_W806.cpp  PwmService_W806.cpp  TimerService_W806.cpp
HardwareAbstractions/W806Hal/include/: AnalogService.h  AnalogService_W806.h  CommunicationService.h  CommunicationService_W806UART.h  DigitalService_W806.h  PwmService_W806.h  TimerService.h  TimerService_W806.h
HardwareAbstractions/W806Hal/src/: AnalogService.cpp  CommunicationService_W806UART.cpp  DigitalService.cpp  DigitalService_W806.cpp  PwmService.cpp  PwmService_W806.cpp  TimerService.cpp  TimerService_W806.cpp
HardwareAbstractions/W80x/: README.md
HardwareAbstractions/W80x/include/: AnalogService_W80x.h  CommunicationService_W80xUART.h  DigitalService_W80x.h  PwmService_W80x.h  (+1 more)
HardwareAbstractions/include/: Stm32HalDigitalService.h  TimerLocks.h
HardwareAbstractions/src/: Stm32HalTimerService.cpp
JS Prototype/: Config.js  IOServicesConfig.js  prototype.html  style.css  utils.js
JS Prototype/ConfigGuiModules/: ConfigGuiModules.js  Selection.html
JS Prototype/IOServicesConfigGui/: BooleanInputServiceConfigGui.html  BooleanInputService_StaticConfigGui.html  BooleanOutputServiceConfigGui.html  FloatInputService_AnalogPolynomialConfigGui.html  FloatInputService_StaticConfigGui.html  IOServicesConfigGui.js
UnitTests/: TimerServiceTests.cpp  UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/Debug/: UnitTests.exp  UnitTests.ilk  vc141.idb
include/: CRC.h  CallBack.h  CommunicationHandler_Prefix.h  Fifo.h  HardwareAbstractionCollection.h  IAnalogService.h  ICANService.h  ICallBack.h  ICommunicationService.h  IDigitalService.h  IPwmService.h  IStream.h  ITimerService.h  PinDirection.h
libs/EmbeddedIOServicesUnitTests/: CMakeLists.txt
libs/HardwareAbstractionSTM32F103Cx/: CMakeLists.txt
mock/: CMakeLists.txt
mock/include/: MockCANService.h  MockCallBack.h  MockCommunicationService.h  MockDigitalService.h  MockTimerService.h
src/: CANService.cpp  CRC.cpp  CommunicationHandler_Prefix.cpp  CommunicationService.cpp  Fifo.cpp  TimerService.cpp
test/: CMakeLists.txt
test/src/: ATTiny427_AnalogServiceTests.cpp  ATTiny427_DigitalServiceTests.cpp  ATTiny427_EVSYSServiceTests.cpp  ATTiny427_ExpanderServiceTests.cpp  ATTiny427_PassthroughServiceTests.cpp  CANServiceTests.cpp  CommunicationHandler_PrefixTest.cpp  CommunicationServiceTests.cpp  TimerServiceTests.cpp
(+201 files in other folders)
